--- a/css/09.css
+++ b/css/09.css
@@ -56,7 +56,7 @@ a{text-decoration: none;
 .nav{width: 140px;
 
 }
-.pnlContent{margin-left: 165px;
+.pnl_content{margin-left: 165px;
     margin-right: 225px;
     padding: 10px;
 }
