--- a/css/08.css
+++ b/css/08.css
@@ -18,7 +18,6 @@ body{padding: 0;
 	font-weight: bold;
 	line-height: 1.8em;
 	text-align: center;
-	position:;
 	width: 100%;
 	margin: 0 0 10px 0;
 }
@@ -38,7 +37,7 @@ body{padding: 0;
 	float: left;
 }
 .left_bar{width: 190px;
-	margin: 0px 5px 5px 5px;
+	margin: 0 5px 5px 5px;
 	float: left;
 }
 .news h3{color: #f60;
@@ -52,7 +51,7 @@ body{padding: 0;
 }
 .img {background: #fff;
 	width: 185px;
-	margin: 5px 0px;
+	margin: 5px 0;
 	float: left;
 	text-align: center;
 }
