--- a/css/03.css
+++ b/css/03.css
@@ -1,12 +1,63 @@
-body {font-family: Arial; padding: 0px 80px 0px 80px;}
-		.menu{height: 50px;
-			background-color: green;
-			position: fixed;
-            top: 0px;
-            width: 1192px;
-            display: table;
-            text-align: all;
-            }	
+*{font-family: Arial;
+	}
+body{width: 80%;
+	height: auto;
+	margin: 0;
+}
+.container{width: 100%;
+	height: auto;
+}
+.menu{width: auto;
+	/*height: 50px;*/
+	/*top: 0px;*/
+	display: inline;
+	/*background: lightblue;*/
+
+}
+.menu ul{display: inline;
+	padding: 0;
+	margin: 0;
+}
+.menu li{display: table-cell;
+	position: relative;
+	background: lightgreen;
+}
+.menu ul li:hover, .menu a:hover{background: lightyellow}
+
+.menu a:hover {background: lightyellow;}
+.menu li a{display: block;
+	padding: 25px 65px;
+	color: black;
+	text-align: center;
+}
+.menu-caret:after {display: inline-block;
+	width: 0;
+	height: 0;
+	margin-left: .255em;
+	vertical-align: .255em;
+	border-right: 3px solid transparent;
+	border-bottom: 0;
+	border-left: 3px solid transparent;
+}
+.menu li:hover ul{display: block;
+	position: absolute;
+	top: 100%;
+	left: 0px;
+	background: lightyellow;
+	margin: 0;
+	padding: 10px 20px;
+	width: 150px;
+	z-index: 9999;
+}
+.menu ul ul{display: none;}
+.menu ul ul li{display: block;
+	background: lightyellow;
+	padding: 5px 0;}
+.menu ul ul li a{display: block;
+	padding: 0;
+	background: lightyellow;
+	text-align: left;;
+}
         .static{height: 100px;
         	background-color: #ff4500;
         }
@@ -63,54 +114,6 @@ body {font-family: Arial; padding: 0px 80px 0px 80px;}
 			bottom: 100px;
 			left: 100px;
 			right: 100px;}
-    .menu ul{list-style: none;
-	       margin: 0;
-	       padding-left: 0;
-	       background: pink;
-	       height: 20px;
-	       margin-top: 0px;
-	       display: table-row;
-           }
-    .menu li{display: table-cell;
-    	   position: relative;
-	       background: pink;
-	   }
-    .menu ul li:hover, .menu a:hover{background: gold}
-
-    .menu a:hover {background: lightpink;
-            text-align: all;}
-    .menu li a{display: block;
-              padding: 25px 65px;
-              color: #191970;
-              text-align: center;}
-    .menu-caret:after {display: inline-block;
-    	       width: 0;
-    	       height: 0;
-    	       margin-left: .255em;
-    	       vertical-align: .255em;
-    	       content: "";
-    	       border-top: 3px solid ;
-    	       border-right: 3px solid transparent;
-    	       border-bottom: 0;
-    	       border-left: 3px solid transparent;}
-    .menu li:hover ul{display: block;
-    	position: absolute;
-    	top: 100%;
-    	left: 0px;
-    	background: gold;
-    	margin: 0;
-    	padding: 10px 20px;
-    	width: 150px;
-    	z-index: 9999;}	        
-    .menu ul ul{display: none;}
-    .menu ul ul li{display: block;
-    	background: gold;
-    	padding: 5px 0;}
-    .menu ul ul li a{display: block;
-    	padding: 0;
-    	background: gold;
-    	text-align: left;;
-    }
     .static1{height: 500px;
     	width: 150px;
         float: left;
