--- a/css/08.css
+++ b/css/08.css
@@ -122,7 +122,7 @@ body{padding: 0;
 .img_belui1{width: 230px;
 	height: 307px;
 	margin: 10px 10px 3px 10px;
-	float: left;
+	float: left
 }
 .footer{background: #E6E6FA;
 	width: 100%;
