--- a/css/09.css
+++ b/css/09.css
@@ -23,24 +23,46 @@ h3{padding: 0 0 5px 5px;}
     text-align: center;
 }*/
 .figure{width: 100%;
-    height: 145px;
+    height: 150px;
     overflow: hidden;
 }
 .pnlMenu{width: 100%;
-    height: 62px;
-    display: inline-flex;
-    overflow: auto;
+    height: 70px;
+    display: inline-block;
+    /*overflow: auto;*/
 }
 .menu{width: 170px;
     height: auto;
-    margin: auto;
+    margin: 0;
     display: inline-block;
     text-align: center;
     font-weight: bolder;
     border-radius: 6px;
     line-height: 45px;
-
  }
+.pnlMenu ul{margin: 14px 0 0 0;}
+.pnlMenu li{list-style: none;
+    position: relative;
+    background: #e4daef;
+}
+.pnlMenu li a{display: block;}
+.pnlMenu ul li{display: inline-block;
+    background: #e4daef;
+    margin: 0;
+    border-radius: 4px;
+}
+.pnlMenu ul li a{display: block;
+    width: 170px;
+    margin: 0;                    /*примыкание блоков выпадающего меню друг к другу*/
+}
+.pnlMenu ul li ul{display: none;
+    position: absolute;
+    margin: 0;                     /*примыкание выпадающего меню к блоку*/
+    line-height: 36px;
+}
+.pnlMenu ul li:hover ul{display: block;
+    /*z-index: 100;*/}
+
 /*.menu:hover{color: orangered;
     font-weight: bolder;}*/
 
